# stocktracker

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT_REPORT.md  Makefile  README.md  dev.ps1
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: analytics.py  assets.py  consistency.py  dashboard.py  holdings.py  notes.py  screenshots.py  transactions.py  watchlist.py
backend/app/models/: __init__.py  assets.py  holdings.py  notes.py  screenshots.py  transactions.py  watchlist.py
backend/app/schemas/: assets.py  holdings.py  screenshots.py  transactions.py
backend/app/services/: ai_recognizer.py  holding_normalizer.py  market_data.py  ocr_recognizer.py  stock_code_map.py
backend/tests/: test_ocr_recognizer.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  table.tsx
frontend/src/lib/: format.ts  format.tsx
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  HoldingsPage.tsx  NotesPage.tsx  TransactionsPage.tsx  UploadPage.tsx  WatchlistPage.tsx
scripts/: clean_test_data.py  fix_holding_prices.py
