[project]
name = "stocktracker-backend"
version = "0.1.0"
description = "Local personal stock trading record assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pillow>=12.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "winocr>=0.0.15",
]

[dependency-groups]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
include = ["app*"]
